--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "cross-env": "^5.2.0",
-    "firebase": "^5.5.6",
-    "nuxt": "^2.2.0"
+    "core-js": "^2.6.11",
+    "cross-env": "^7.0.2",
+    "firebase": "^7.10.0",
+    "nuxt": "^2.11.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
